# NVIDIA-Optical-Character-Detection-and-Recognition-Solution

./: CMakeLists.txt
c++_samples/crop_based_inference/: CMakeLists.txt  crop_based_inference.cpp
c++_samples/crop_based_inference_vit/: CMakeLists.txt  crop_based_inference_vit.cpp
c++_samples/simple_inference/: CMakeLists.txt  simple_inference.cpp
c++_samples/simple_inference_ClipOCR/: CMakeLists.txt  simple_inference_ClipOCR.cpp
c++_samples/simple_inference_vit/: CMakeLists.txt  simple_inference_vit.cpp
src/: CMakeLists.txt
